# RemoteOpsX

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: distribution.md
packaging/arch/: PKGBUILD  remoteopsx.desktop
packaging/linux/: bootstrap-dependencies.sh  install-appimage.sh  uninstall-appimage.sh
packaging/macos/: bootstrap-dependencies.sh  install-app.sh
scripts/: bootstrap-dependencies.sh
scripts/pkgconfig/: gdk-pixbuf-2.0.pc
src/: App.tsx  api.ts  errors.test.ts  errors.ts  main.tsx  runbookMachine.test.ts  runbookMachine.ts  settings.test.ts  settings.ts  settingsStore.ts  store.test.ts  store.ts  styles.css  styles.test.ts  terminalSession.test.ts  terminalSession.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  error.rs  ftp_manager.rs  health_collector.rs  lib.rs  main.rs  models.rs  pty_manager.rs  rdp_adapter.rs  runbook_runner.rs  settings.rs  sftp_manager.rs  ssh_keys.rs  ssh_manager.rs  tunnel_manager.rs  vault.rs  vnc_adapter.rs
src-tauri/tests/: ssh_integration.rs
src-tauri/tests/fixtures/sshd/: Dockerfile  entrypoint.sh
src/components/: BottomPanel.tsx  CommandPalette.tsx  DockerPanel.tsx  HealthPanel.test.tsx  HealthPanel.tsx  LogsPanel.tsx  NotesSnippetsPanel.tsx  RemoteDesktopTab.tsx  RightPanel.tsx  RunbookLauncher.tsx  RunbookRunner.tsx  ServerForm.tsx  ServerSidebar.tsx  ServicesPanel.tsx  SettingsModal.test.tsx  SettingsModal.tsx  TabBar.tsx  (+5 more)
(+8 files in other folders)
